--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "npm install --legacy-peer-deps || true"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
@@ -20,7 +21,7 @@
     "expo-router": "~6.0.21",
     "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
-    "react": "19.1.0",
+    "react": "19.2.3",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0"
