--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,13 @@ yarn-error.log
 # Environment
 .env
 .env.local
+.env.*.local
+
+# Firebase
+google-services.json
+GoogleService-Info.plist
+firebase-debug.log
+firestore-debug.log
 
 # IDE
 .vscode/
