--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-router": "~6.0.22",
     "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
+    "firebase": "^12.8.0",
     "react": "^19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.0",
