Add invitation code generation and Firestore import scripts
- Add script to generate 100 invitation codes to file
- Add script to import codes to Firestore using Firebase Admin SDK
- Add script to generate Firestore import JSON format
- Add documentation guides for adding codes to Firestore
- Generate initial 100 invitation codes and add to Firestore
- Codes are now available in Firestore for app validation
- Add serviceAccountKey.json to .gitignore (contains secrets)

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ google-services.json
 GoogleService-Info.plist
 firebase-debug.log
 firestore-debug.log
+serviceAccountKey.json
+*.serviceAccountKey.json
 
 # IDE
 .vscode/
