--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-crypto": "~15.0.8",
     "expo-font": "~14.0.11",
     "expo-linking": "~8.0.11",
+    "expo-notifications": "^0.32.16",
     "expo-router": "~6.0.22",
     "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
